adapters/kustomize/adapters/overlays/local/adapters/rp/add-ca.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rp
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: ca-cert
      containers:
        - name: rp
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/rp/tls
