adapters/kustomize/adapters/overlays/local/adapters/rp/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rp
  labels:
    app: rp
spec:
  tls:
  - hosts:
      - $(RP_ADAPTER_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(RP_ADAPTER_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adapter-rp
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rp-didcomm
  labels:
    app: rp
spec:
  tls:
  - hosts:
      - $(RP_ADAPTER_DIDCOMM_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(RP_ADAPTER_DIDCOMM_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: adapter-rp-didcomm
            port:
              name: http
